<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profileback"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <RelativeLayout
            android:id="@+id/profile_container"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_margin="24dp"
            android:background="#66FFFFFF">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="168dp"
                android:layout_height="168dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="78dp"
                android:src="@drawable/profile"
                app:civ_border_color="#1976D2"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/profile_name_id"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_name" />

            <TextView
                android:id="@+id/profile_name_text_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:layout_toRightOf="@id/profile_name_id"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_name_text" />

            <TextView
                android:id="@+id/profile_nim_id"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name_text_id"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="12dp"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_nim" />

            <TextView
                android:id="@+id/profile_nim_text_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name_text_id"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:layout_toRightOf="@id/profile_nim_id"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_nim_text" />

            <TextView
                android:id="@+id/profile_class_id"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_nim_id"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="12dp"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_class" />

            <TextView
                android:id="@+id/profile_class_text_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_nim_text_id"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:layout_toRightOf="@id/profile_class_id"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_nim_text" />

            <TextView
                android:id="@+id/profile_faculty_id"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_class_id"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="12dp"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_faculty" />

            <TextView
                android:id="@+id/profile_faculty_text_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_class_text_id"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:layout_toRightOf="@id/profile_faculty_id"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_faculty_text" />

            <TextView
                android:id="@+id/profile_college_id"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_faculty_id"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="12dp"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_college" />

            <TextView
                android:id="@+id/profile_college__text_id"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_faculty_text_id"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="12dp"
                android:layout_toRightOf="@id/profile_college_id"
                android:background="#99FFFFFF"
                android:padding="4dp"
                android:text="@string/profile_college_text" />

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/profile_college__text_id"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="24dp"
                android:src="@drawable/unsri" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lorem_container"
            android:layout_below="@id/profile_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#66FFFFFF"
            android:layout_margin="24dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:gravity="center"/>


        </RelativeLayout>

        <Button
            android:id="@+id/button_back_id"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lorem_container"
            android:text="@string/back_button" />


    </RelativeLayout>
</ScrollView>